--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
     "customize-cra": "^0.9.1",
     "globby": "^11.0.0",
     "html-webpack-plugin": "^4.3.0"
-  }
+  },
+  "proxy":"http://localhost:3000"
 }
