--- a/public/app.json
+++ b/public/app.json
@@ -1,5 +1,5 @@
 [
-    { "name":"aa", "_id":1,"age":"22","title":"听音乐🎵"},
+    {  "_id":1,"age":"22","title":"听音乐🎵"},
     { "name":"张三", "_id":2,"age":"23","title":"吃香蕉🍌"},
     { "name":"王五", "_id":3,"age":"31","title":"听音乐🎵"},
     { "name":"朱柏乐", "_id":4,"age":"56","title":"听音乐🎵"},
