--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "redux-undo": "^1.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -43,5 +44,5 @@
     "globby": "^11.0.0",
     "html-webpack-plugin": "^4.3.0"
   },
-  "proxy":"http://localhost:3000"
+  "proxy": "http://localhost:3000"
 }
